apps/kube-system/cilium/app/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames: ["hubble.admin.mirceanton.com"]
  parentRefs:
    - name: envoy-admin
      namespace: network-system
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
